# vagrant

./: .gitattributes  .gitignore  CODEOWNERS  README.md
docs/: BOM.md  README.md  RobotSchema.dia
vagrant/: CMakeLists.txt  package.xml
vagrant_description/: CMakeLists.txt  package.xml
vagrant_description/controllers/: diff_drive_controller.yaml  joint_state_controller.yaml
vagrant_description/launch/: vagrant.launch  view.launch
vagrant_description/model/: base.blend  base.dae  motor.urdf.xacro  vagrant.urdf.xacro
vagrant_description/model/wheel_motor_rotor/: wheel_motor_rotor.blend  wheel_motor_rotor.dae
vagrant_description/model/wheel_motor_stator/: wheel_motor_stator.blend  wheel_motor_stator.dae
vagrant_description/rviz/: view.rviz
vagrant_simulation/: CMakeLists.txt  package.xml
vagrant_simulation/launch/: simulation.launch
vagrant_simulation/rviz/: view.rviz
