<?xml version="1.0"?>
<package format="2">
  <name>vagrant_description</name>
  <version>0.1.1</version>
  <description>Robot description for Vagrant Bot</description>

  <maintainer email="standmit@zabstrannik.ru">Andrey Stepanov (standmit)</maintainer>

  <license>GPLv3</license>

  <author email="standmit@zabstrannik.ru">Andrey Stepanov (standmit)</author>
  <author email="dixros@protonmail.com">DiXros</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>urdf_juggle</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
